# kebab

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/instructions/: code-review.instructions.md
app/: __init__.py  cli.py
app/agents/generate/: __init__.py  gaps.py  generate.py  writer.py
app/agents/ingest/: pdf.py  registry.py  web.py
app/agents/lint/: agent.py
app/agents/organize/: __init__.py  agent.py  manifest.py  merge.py  models.py  organize.py  plan.py  stubs.py
app/agents/qa/: agent.py  qa.py
app/agents/qa_generate/: qa_generate.py
app/agents/research/: agent.py  executor.py  planner.py  research.py  synthesizer.py  verifier.py  writer.py
app/agents/research_gaps/: classifier.py  query_planner.py  research_gaps.py  writer.py
app/agents/research_images/: describer.py  fetcher.py  research_images.py  targets.py  writer.py
app/agents/sync/: __init__.py  sync.py
app/config/: __init__.py  config.py  logging.py  models.yaml
app/core/: audit.py  confidence.py  errors.py  markdown.py  markdown_ext.py  store.py
app/core/images/: __init__.py  figures.py  filter_images.py  filters.py  image_describer.py
app/core/llm/: __init__.py  embeddings.py  model_registry.py  multimodal.py  resolve.py  tokens.py  trace.py
app/core/research/: searcher.py
app/core/sources/: __init__.py  adapter.py  fetcher.py  index.py  provenance.py
app/models/: __init__.py  article.py  confidence.py  context.py  frontmatter.py  source.py
app/pipeline/: contexts.py  gaps.py  generate.py  organize.py  organize_agent.py
app/pipeline/generate/: __init__.py  gaps.py  generate.py  writer.py
app/pipeline/ingest/: csv_json.py  inbox.py  pdf.py  registry.py  web.py
app/pipeline/organize/: __init__.py  manifest.py  merge.py  models.py  organize.py  plan.py  stubs.py
app/utils/: git_ops.py  pdf_extractor.py  string_utils.py  web_scraper.py
docs/: pilot.md  pipeline.md  quickstart.md
evals/: conftest.py  context.py  run.py
evals/datasets/: generation.yaml  qa.yaml  verification.yaml
evals/evaluators/: common.py
evals/suites/: figure_filter.py  figure_filter_baseline.json  generation.py  generation_baseline.json  qa.py  qa_baseline.json  verification.py  verification_baseline.json
tests/: conftest.py
tests/unit/core/: test_audit.py  (+21 more)
(+119 files in other folders)
